# SPDX-FileCopyrightText: 2026 QuantGlass contributors
# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantglass-sdk"
version = "0.3.0"
description = "Stable authoring surface for QuantGlass extensions (providers, strategies, indicators, lesson/mission packs)."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "QuantGlass contributors" }]
keywords = ["quantglass", "trading", "extensions", "sdk"]
dependencies = []

[project.urls]
Homepage = "https://github.com/quantglass-labs/quantglass-sdk"
Source = "https://github.com/quantglass-labs/quantglass-sdk"

[tool.hatch.build.targets.wheel]
packages = ["quantglass_sdk"]
